--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -82,6 +82,10 @@ header {
     color: white;
 }
 
+a:visited {
+    color: white;
+}
+
 /* media query for header-nav */
 @media only screen and (max-width: 1260px) {
     #header-nav {
