--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -19,6 +19,10 @@ html {
     font-size: 16px;
 }
 
+body{
+    background-color: white !important;
+}
+
 header {
     background-color: transparent !important;
 }
