--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -46,12 +46,12 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
+/* 
 @media only screen and (max-width:560px) {
     #content-body {
         margin-top: 100px;
     }
-}
+} */
 
 #left-side {
     height: 100%;
