changes on content body

--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -39,6 +39,7 @@ header {
 }
 
 #content-body {
+    min-height: max-content;
     padding-inline-start: 5.208vw;
     padding-inline-end: 5.208vw;
     margin-top: auto;
