--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -400,6 +400,7 @@ footer {
     color: #fff;
     letter-spacing: 0.040em;
     text-decoration: none;
+    cursor: pointer;
 }
 
 /* media query for social-links-title */
