--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -102,7 +102,8 @@ a:visited,
 
 #burger-menu {
     display: none;
-    margin-inline-end: 30px;
+    padding-inline-end: 30px;
+    cursor: pointer;
 }
 
 /* media query for header navigation */
@@ -473,3 +474,238 @@ footer {
 /* footer ends here */
 
 /* --------------------------------------------------------------------------------------------------- */
+
+
+/* model box starts here */
+/* ======================================================================= */
+
+
+.model-background {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.35);
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1.1);
+    z-index: 10;
+}
+
+.modelBox {
+    background-color: white;
+    width: 62.500vw;
+    height: 600px;
+    border-radius: 20px;
+    position: fixed;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: all .35s ease-out;
+}
+
+.close-button {
+    margin: 20px;
+    float: right;
+    /* width: 2.5rem; */
+    /* line-height: 2.5rem; */
+    text-align: center;
+    cursor: pointer;
+    border-radius: 0.25rem;
+}
+
+.hide-model {
+    /* display: none; */
+    opacity: 0;
+    visibility: hidden;
+    transition: all .35s ease-out;
+}
+
+.animate-box {
+    bottom: 100%;
+    transition: all .35s ease-out;
+}
+
+.model-contents {
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.mail-form {
+    justify-self: start;
+    width: 350px;
+}
+
+.mail-form .main-heading,
+#contact-info .main-heading {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 111.8%;
+    margin-bottom: 60px;
+}
+
+.mail-form .text-box {
+    margin-bottom: 30px;
+}
+
+.mail-form label {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 111.8%;
+    margin-left: 10px;
+}
+
+.mail-form input,
+textarea {
+    width: 300px;
+    height: 40px;
+    background-color: #e9e9e9;
+    border: none;
+    border-radius: 5px;
+    margin-top: 2px;
+}
+
+.mail-form #user-message {
+    height: 100px;
+    resize: none;
+}
+
+.divider {
+    width: 1px;
+    height: 400px;
+    background-color: #000;
+    border-radius: 10px;
+}
+
+#contact-info {
+    width: 450px;
+    margin-left: 50px;
+}
+
+#contact-info>* {
+    margin-bottom: 25px;
+}
+
+#contact-info .model-social-links {
+    margin-bottom: 0px;
+    margin-top: 60px;
+    display: flex;
+    column-gap: 25px;
+}
+
+.model-style {
+    color: #000 !important;
+}
+
+.send-mail-btn {
+    width: 200px;
+    height: 40px;
+    background-color: #063247;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 16px;
+    color: white;
+}
+
+.model-social-icon {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+input[type=text],
+textarea {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 111.8%;
+    padding-left: 10px;
+}
+
+textarea {
+    padding-top: 10px;
+}
+
+
+@media only screen and (max-width:1520px) {
+    .model-contents {
+        margin-left: 50px;
+    }
+
+    .mail-form {
+        width: 300px;
+    }
+
+    .mail-form input,
+    textarea {
+        width: 250px;
+    }
+
+    #contact-info {
+        width: 300px;
+    }
+
+    .send-mail-btn {
+        width: 150px;
+    }
+}
+
+/* Model box ends here */
+/* ==================================================================================================== */
+
+
+/* Mobile Nav starts here */
+
+.mobile-nav-background {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    left: 100%;
+    background-color: var(--accent-color);
+    transition: all .35s ease-out;
+}
+
+.show-mobile-nav {
+    left: 0 !important;
+    transition: all .35s ease-out;
+}
+
+
+.mobile-nav>.close-mobile-nav {
+    justify-self: end;
+    padding: 30px;
+    cursor: pointer;
+}
+
+.mobile-nav {
+    overflow: scroll;
+    display: grid;
+    row-gap: 30px;
+}
+
+.mobile-nav-items {
+    background-color: cadetblue;
+    height: 70px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-inline-start: clamp(40px, 10vw, 80px);
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+}
