--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -140,6 +140,8 @@ html {
     width: clamp(200px, 20vw, 300px);
     height: fit-content;
     box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, .25);
+    border: 3px solid white;
+    border-radius: 5px;
 }
 
 .images:first-child {
