--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -165,6 +165,13 @@ a:visited,
     align-items: center;
 }
 
+/* media query for hero section */
+@media only screen and (max-width: 760px) {
+    #hero-section {
+        margin-top: 90px;
+    }
+}
+
 #hero-section-logo {
     display: none;
 }
