bug fixes mobile nav index page

--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -29,6 +29,11 @@ header {
     z-index: 0 !important;
 }
 
+.mobile-nav-background {
+    margin-top: 0px !important;
+}
+
+
 .hide-header {
     position: fixed;
     top: -110px !important;
