--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -1,6 +1,7 @@
 /* variables define here */
 
 :root {
+    --accent-dark: #03161F;
     --accent-color: #063247;
     --light-grey: #404040;
     --dark-grey: #16161d;
@@ -233,17 +234,21 @@ header {
 #left-side #container-button button:nth-child(1) {
     background: var(--accent-color);
     border: 2px hidden var(--accent-color);
+    transition: all 350ms ease-out;
 
 }
 
-#left-side #container-button button:nth-child(1):hover {
-    background: var(--accent-color);
+#left-side #container-button button:nth-child(1):hover,
+#left-side #container-button button:nth-child(2):hover {
+    background: var(--accent-dark);
+    transition: all 350ms ease-out;
 }
 
 #left-side #container-button button:nth-child(2) {
-    background: rgba(3, 22, 31, 0.35);
+    background-color: rgba(3, 22, 31, 0.35);
     border: 3px solid #FFFFFF;
     margin-left: 50px;
+    transition: all 350ms ease-out;
 }
 
 @media only screen and (max-width: 560px) {
