--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -226,6 +226,7 @@ a:visited,
     font-family: 'Playfair Display', serif;
     font-size: 3em;
     font-weight: 600;
+    letter-spacing: 0.040em;
     color: var(--accent-color);
 }
 
@@ -240,6 +241,7 @@ a:visited,
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 1.5em;
+    word-spacing: 0.080em;
     color: var(--accent-color);
     margin-inline-start: 20px;
     margin-inline-end: 20px;
