--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -223,7 +223,7 @@ a:visited,
 }
 
 #services-title {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Philosopher', serif;
     font-size: 3em;
     font-weight: 600;
     letter-spacing: 0.040em;
