--- a/CSS/index-desktop.css
+++ b/CSS/index-desktop.css
@@ -120,7 +120,7 @@ header {
 }
 
 #left-side #text-binding div {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Philosopher', serif;
     font-style: normal;
     font-weight: 700;
     font-size: 64px;
@@ -133,7 +133,7 @@ header {
 #left-side #text-binding p {
     margin-top: 30px;
     width: 700px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -196,7 +196,7 @@ header {
     height: 70px;
     width: clamp(200px, 20vw, 260px);
     height: clamp(50px, 20vw, 70px);
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-weight: 500;
     font-size: 24px;
     line-height: 29px;
@@ -340,7 +340,7 @@ header {
 }
 
 #why-choose-us h1 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Philosopher', serif;
     font-weight: 600;
     font-size: 32px;
     line-height: 111.8%;
@@ -351,7 +351,7 @@ header {
 
 #why-choose-us span {
     width: 80vw;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -384,7 +384,7 @@ header {
 }
 
 #our-products #heading {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Philosopher', serif;
     font-style: normal;
     font-weight: 600;
     font-size: 3em;
@@ -394,7 +394,7 @@ header {
 }
 
 #our-products #sub-heading {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 24px;
@@ -512,7 +512,7 @@ header {
 }
 
 .service-card-title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 2em;
     font-weight: 400;
     color: var(--dark-grey);
@@ -553,7 +553,7 @@ header {
     display: block;
     text-align: center;
     margin-block-start: 60px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 24px;
     font-weight: 500;
     letter-spacing: 0.040em;
@@ -573,7 +573,7 @@ header {
 }
 
 #our-services-heading {
-    font-family: 'Playfair Display';
+    font-family: 'Philosopher';
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -631,7 +631,7 @@ header {
 }
 
 .service-items-title-text {
-    font-family: 'Montserrat', 'sans-serif';
+    font-family: 'Source Sans 3', 'sans-serif';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -641,7 +641,7 @@ header {
 }
 
 .service-items-desc {
-    font-family: 'Montserrat', 'sans-serif';
+    font-family: 'Source Sans 3', 'sans-serif';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
