--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -238,7 +238,7 @@ a:visited,
 }
 
 #services-subtitle {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-weight: 500;
     font-size: 1.5em;
     word-spacing: 0.080em;
@@ -371,7 +371,7 @@ footer {
 }
 
 .detail-title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 24px;
     font-weight: 400;
     color: #fff;
@@ -386,7 +386,7 @@ footer {
 }
 
 .detail-subtitle {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 12px;
     font-weight: 400;
     color: #fff;
@@ -402,7 +402,7 @@ footer {
 
 #social-links-title,
 #quick-links-title {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     color: #fff;
     font-size: 32px;
     font-weight: 500;
@@ -444,7 +444,7 @@ footer {
 .quick-link-name {
     width: max-content;
     height: max-content;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 24px;
     font-weight: 400;
     color: #fff;
@@ -480,7 +480,7 @@ footer {
     align-items: center;
     padding-inline-start: 100px;
     height: 100px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-size: 24px;
     font-weight: 400;
     color: #fff;
@@ -595,7 +595,7 @@ footer {
 
 .mail-form .main-heading,
 #contact-info .main-heading {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-weight: 600;
     font-size: 25px;
     line-height: 111.8%;
@@ -607,7 +607,7 @@ footer {
 }
 
 .mail-form label {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 111.8%;
@@ -663,7 +663,7 @@ textarea {
     border: none;
     cursor: pointer;
     margin-top: 20px;
-    font-family: 'Montserrat';
+    font-family: 'Source Sans 3';
     font-weight: 400;
     font-size: 16px;
     color: white;
@@ -677,7 +677,7 @@ textarea {
 
 input[type=text],
 textarea {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 111.8%;
@@ -818,7 +818,7 @@ textarea {
     justify-content: flex-start;
     align-items: center;
     margin-inline-start: clamp(40px, 10vw, 80px);
-    font-family: 'Montserrat';
+    font-family: 'Source Sans 3';
     font-weight: 400;
     font-size: 24px;
     color: white;
