--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -6,15 +6,17 @@
     --dark-grey: #16161d;
 }
 
-/*  */
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
+::selection {
+    background-color: var(--accent-color);
+    color: #fff;
+}
 
 /* overflow fix for mobile */
 
@@ -197,6 +199,7 @@ a:visited,
     justify-content: center;
     align-items: center;
 }
+
 
 /* media query for hero section */
 @media only screen and (max-width: 760px) {
