--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -167,6 +167,30 @@ a:visited,
     }
 }
 
+.nav-links {
+    display: inline-block;
+    position: relative;
+}
+
+.nav-links:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    transform-origin: bottom right;
+    transition: transform 0.35s ease-out;
+}
+
+.nav-links:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+
 .nav-links:link {
     color: #fff;
     text-decoration: none;
