cursor set to pointer in contact us model box

--- a/CSS/header&footer.css
+++ b/CSS/header&footer.css
@@ -672,6 +672,10 @@ textarea {
     margin-bottom: 25px;
 }
 
+#contact-info > #location,#call-us,#email-us{
+    cursor: pointer;
+}
+
 #contact-info .model-social-links {
     margin-bottom: 0px;
     margin-top: 60px;
