--- a/CSS/product&services.css
+++ b/CSS/product&services.css
@@ -30,7 +30,7 @@ html {
     padding-block-start: 100px;
     padding-block-end: 100px;
     display: block;
-    background-image: url(/assets/services-page-patterns.png);
+    background-image: url(/assets/patterns.svg);
     background-repeat: repeat-y;
     /* background-position: center; */
 }
